--- a/MkRules.local.in
+++ b/MkRules.local.in
@@ -21,6 +21,11 @@ OPENMP = -fopenmp
 CURL_LIBS = -lcurl -lssh2 -lz -lssl -lcrypto -lgdi32 -lws2_32 -lcrypt32 -lwldap32
 ICU_LIBS = -licuin -licuuc -licudt -lstdc++
 
+## Requires 'cairolibs.diff' patch
+USE_CAIRO = YES
+CAIRO_LIBS = "-lcairo -lfontconfig -lfreetype -lpng -lpixman-1 -lexpat -lharfbuzz -lbz2 -lintl -lz -liconv -lgdi32 -lmsimg32"
+CAIRO_CPPFLAGS = -I/mingw@win@/include/cairo
+
 ## Hardcode paths (not needed in Rtools 4.0)
 # CURL_PATH =
 # CAIRO_HOME =
