--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,4 @@
 environment:
-  TZ: Europe/Amsterdam
   RTOOLS_ARCH: x86_64
   PfxUri:
     secure: z+vP1iY4odY07BV7v+yfuA2MBKQFFLGokZoefPhz22evsMT/KnwtB4NgcYNLJheI
@@ -14,6 +13,7 @@ install:
     - ps: InstallInno
     - ps: InstallMiktex
     - ps: InstallRtoolsExe
+    - ps: SetTimezone
 
 build_script:
   - C:\rtools40\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/build.sh"
