--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,5 +29,19 @@ artifacts:
     name: installer
 
 on_finish:
-  - 7z a logs.zip *.log
-  - appveyor PushArtifact logs.zip
+  - 7z a r-devel.zip *.log
+  - appveyor PushArtifact r-devel.zip
+
+deploy:
+  - provider: BinTray
+    username: jeroen
+    subject: rtools
+    repo: installer
+    package: testing
+    version: latest
+    publish: true
+    override: true
+    api_key:
+      secure: rKoNWcAgUrOM7QLX4cEvA1iKoY2DR4ps/1PRveq7rJknjQjcpKx8xGs42CJPhDwJ
+    on:
+      branch: master
