--- a/MkRules.local.in
+++ b/MkRules.local.in
@@ -4,7 +4,9 @@
 WIN = @win@
 BINPREF = /mingw32/bin/
 BINPREF64 = /mingw64/bin/
-COMPILED_BY=gcc-8.3.0
+
+# Should be picked up automatically
+#COMPILED_BY=gcc-8.3.0
 
 ## Custom compile flags
 # EOPTS = -Wno-unused-variable -Wno-unused-function -Wno-unused-but-set-variable
