--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,9 @@ environment:
   SignTool: C:\Program Files (x86)\Windows Kits\8.1\bin\x64\signtool.exe
   CertKit: C:\Program Files (x86)\Windows Kits\10\App Certification Kit\appcert.exe
   KeyFile: C:\jeroen.pfx
+  matrix:
+  - archive: r-testing
+  - archive: r-devel
 
 install:
     - ps: Import-Module .\scripts.ps1
@@ -51,3 +54,4 @@ deploy:
       secure: rKoNWcAgUrOM7QLX4cEvA1iKoY2DR4ps/1PRveq7rJknjQjcpKx8xGs42CJPhDwJ
     on:
       branch: master
+      archive: r-testing
