--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,8 @@ environment:
   CertKit: C:\Program Files (x86)\Windows Kits\10\App Certification Kit\appcert.exe
   KeyFile: C:\jeroen.pfx
   matrix:
-  - version: r-testing
-  - version: r-devel
+  - rversion: R-testing
+  - rversion: R-devel
 
 install:
     - ps: Import-Module .\scripts.ps1
@@ -19,25 +19,21 @@ install:
     - ps: SetTimezone
 
 build_script:
-  - C:\rtools40\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/build-installer.sh"
+  - C:\rtools40\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/full-build.sh"
 
 after_build:
-  - move "src\build64\src\gnuwin32\installer\%version%-win.exe" .
+  - move src\build64\src\gnuwin32\installer\%rversion%-win.exe .
   - ps: Start-FileDownload $env:PfxUri -FileName $env:KeyFile
-  - ps: SignFiles R-testing-win.exe
+  - ps: SignFiles ${env:rversion}-win.exe
   - ps: Remove-Item –path $env:KeyFile
 
 artifacts:
-  - path: "%version%-win.exe"
+  - path: "%rversion%-win.exe"
     name: installer
   - path: r-devel.log
     name: buildlog
 
 on_finish:
-  - 7z a buildlog.zip *.log
-  - appveyor PushArtifact buildlog.zip
-
-on_failure:
   - 7z a tests.zip src\build64\tests\*.Rout*
   - appveyor PushArtifact tests.zip
 
@@ -54,4 +50,4 @@ deploy:
       secure: rKoNWcAgUrOM7QLX4cEvA1iKoY2DR4ps/1PRveq7rJknjQjcpKx8xGs42CJPhDwJ
     on:
       branch: master
-      version: r-testing
+      rversion: R-testing
