--- a/MkRules.local.in
+++ b/MkRules.local.in
@@ -25,7 +25,7 @@ ICU_LIBS = -licuin -licuuc -licudt -lstdc++
 
 ## Requires 'cairolibs.diff' patch
 USE_CAIRO = YES
-CAIRO_LIBS = "-lcairo -lfreetype -lpng -lpixman-1 -lexpat -lharfbuzz -lbz2 -lintl -lz -liconv -lgdi32 -lmsimg32"
+CAIRO_LIBS = "-lcairo -lfreetype -lpng -lpixman-1 -lz -liconv -lgdi32 -lmsimg32"
 CAIRO_CPPFLAGS = -I/mingw@win@/include/cairo
 
 ## Hardcode paths (not needed in Rtools 4.0)
