move installer after script completes

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,6 +24,7 @@ build_script:
 after_build:
   - cd pkg\r-installer
   - call target.cmd
+  - move ..\..\src\build64\src\gnuwin32\installer\%target%-win.exe .
   - ps: Start-FileDownload $env:PfxUri -FileName $env:KeyFile
   - ps: SignFiles "${env:target}-win.exe"
   - ps: Remove-Item –path $env:KeyFile
