--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,11 @@ environment:
   CertKit: C:\Program Files (x86)\Windows Kits\10\App Certification Kit\appcert.exe
   KeyFile: C:\jeroen.pfx
   matrix:
-  - rversion: R-testing
-  - rversion: R-devel
+    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
+      rversion: R-testing
+    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
+      rversion: R-devel
+      cran: true
 
 install:
     - ps: Import-Module .\scripts.ps1
@@ -60,3 +63,20 @@ deploy:
     on:
       branch: master
       rversion: R-testing
+
+  - provider: Environment
+    name: ftp_archive
+    target: "%target%"
+    archive: "%rversion%"
+    revision: "%revision%"
+    on:
+      branch: master
+      rversion: R-devel
+
+  - provider: Environment
+    name: ftp_current
+    target: "%target%"
+    on:
+      branch: master
+      rversion: R-devel
+      cran: true
