--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,7 +45,7 @@ artifacts:
     name: buildlog
 
 on_finish:
-  - 7z a tests.zip src\build64\tests\*.Rout*
+  - 7z a tests.zip src\build64\tests\*.Rout* src\build32\tests\*.Rout*
   - appveyor PushArtifact tests.zip
 
 deploy:
