do not override EOPTS

--- a/MkRules.local.in
+++ b/MkRules.local.in
@@ -9,8 +9,7 @@ BINPREF64 = /mingw64/bin/
 #COMPILED_BY=gcc-8.3.0
 
 ## Custom compile flags
-# EOPTS = -Wno-unused-variable -Wno-unused-function -Wno-unused-but-set-variable
-EOPTS = -mtune=generic
+# EOPTS = -mtune=generic
 
 # Enable features
 USE_ICU = YES
