--- a/MkRules.local.in
+++ b/MkRules.local.in
@@ -5,10 +5,7 @@ WIN = @win@
 BINPREF = /mingw32/bin/
 BINPREF64 = /mingw64/bin/
 
-# Should be picked up automatically
-#COMPILED_BY=gcc-8.3.0
-
-## Custom compile flags
+## Add custom compile flags here
 # EOPTS = -mtune=generic
 
 # Enable features
@@ -16,33 +13,23 @@ USE_ICU = YES
 USE_LIBCURL = YES
 BUILD_HTML = YES
 USE_ATLAS = NO
+MIKTEX = TRUE
 OPENMP = -fopenmp
 
-## Static link flags
+## Curl / ICU flags
 CURL_LIBS = -lcurl -lssh2 -lz -lssl -lcrypto -lgdi32 -lws2_32 -lcrypt32 -lwldap32
 ICU_LIBS = -licuin -licuuc -licudt -lstdc++
 
-## Requires 'cairolibs.diff' patch
+# Cairo flags
 USE_CAIRO = YES
 CAIRO_LIBS = "-lcairo -lfreetype -lpng -lpixman-1 -lz -liconv -lgdi32 -lmsimg32"
 CAIRO_CPPFLAGS = -I/mingw@win@/include/cairo
-
-## Hardcode paths (not needed in Rtools 4.0)
-# CURL_PATH =
-# CAIRO_HOME =
-# EXT_LIBS =
-# ICU_PATH =
 
 ## For building docs/installer
 ISDIR = C:/Program Files (x86)/Inno Setup 6
 MAKEINFO = texi2any
 TEXI2ANY = texi2any
-BUILD_HTML = YES 
-MIKTEX = TRUE
 HOME32 = @home32@
 
 ## Fix for MiKTeX removing texi2dvi
 TEXI2DVI = TEXINDEX=@texindex@ texify
-
-## Workaround for msys2?
-#export MSYS2_ENV_CONV_EXCL="R_ARCH"
