--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,14 +8,9 @@ environment:
   CertKit: C:\Program Files (x86)\Windows Kits\10\App Certification Kit\appcert.exe
   KeyFile: C:\jeroen.pfx
   matrix:
-    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
-      rversion: r-patched
+    - rsource_url: https://cran.r-project.org/src/base/R-4/R-4.0.0.tar.gz
+      rversion: r-release
       cran: true
-    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
-      rversion: r-devel
-      cran: true
-    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
-      rversion: r-testing
 
 install:
     - ps: Import-Module .\scripts.ps1
@@ -52,28 +47,12 @@ on_finish:
   - appveyor PushArtifact tests.zip
 
 deploy:
-  - provider: BinTray
-    username: jeroen
-    subject: rtools
-    repo: installer
-    package: testing
-    version: latest
-    publish: true
-    override: true
-    artifact: "%target%-win.exe"
-    api_key:
-      secure: rKoNWcAgUrOM7QLX4cEvA1iKoY2DR4ps/1PRveq7rJknjQjcpKx8xGs42CJPhDwJ
-    on:
-      branch: master
-      rversion: r-testing
-
   - provider: Environment
     name: ftp_archive
     target: "%target%"
     archive: "%rversion%"
     revision: "%revision%"
     on:
-      branch: master
       cran: true
     artifact: "%target%-win.zip"
 
@@ -81,6 +60,5 @@ deploy:
     name: ftp_current
     target: "%target%"
     on:
-      branch: master
       cran: true
     artifact: "%target%-win.zip"
