--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,9 +11,9 @@ environment:
     - rsource_url: https://cran.r-project.org/src/base-prerelease/R-latest.tar.gz
       rversion: r-patched
       cran: true
-    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
-      rversion: r-devel
-      cran: true
+#    - rsource_url: https://cran.r-project.org/src/base-prerelease/R-devel.tar.gz
+#      rversion: r-devel
+#      cran: true
 
 install:
     - ps: Import-Module .\scripts.ps1
@@ -46,7 +46,7 @@ artifacts:
     name: buildlog
 
 on_finish:
-  - 7z a tests.zip src\R-source\tests\*.Rout* src\build32\tests\*.Rout*
+  - 7z a tests.zip src\R-source\tests\*.Rout* src\build32\tests\*.Rout* C:\Users\appveyor\AppData\Local\MiKTeX\miktex\log\texify.log
   - appveyor PushArtifact tests.zip
 
 deploy:
