--- a/MkRules.local.in
+++ b/MkRules.local.in
@@ -3,10 +3,10 @@
 ## Toolchain config
 WIN = @win@
 BINPREF = /mingw32/bin/
-BINPREF64 = /mingw64/bin/
+BINPREF64 = /ucrt64/bin/
 
 ## Produce a debug build
-# DEBUG = 1
+DEBUG = 1
 
 ## Add custom compile flags here
 # EOPTS = -mtune=generic
@@ -26,7 +26,7 @@ ICU_LIBS = -licuin -licuuc -licudt -lstdc++
 # Cairo flags
 USE_CAIRO = YES
 CAIRO_LIBS = "-lcairo -lfreetype -lpng -lpixman-1 -lz -liconv -lgdi32 -lmsimg32"
-CAIRO_CPPFLAGS = -I/mingw@win@/include/cairo
+CAIRO_CPPFLAGS = -I/ucrt@win@/include/cairo
 
 ## For building docs/installer
 ISDIR = C:/Program Files (x86)/Inno Setup 6
